# rpc

./: .gitignore  Cargo.toml  build.bat  portaudio.lib  run.bat
src/: basslib.rs  lib.rs  library.rs  main.rs  source_handler.rs  stream.rs  timer.rs
src/tui-rs/: Cargo.toml
src/tui-rs/src/widgets/: paragraph.rs  reflow.rs
