[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
copypasta = "*"
libc = "*"
widestring = "*"
walkdir = "*"
# cpal = "*"
rubato = "*"
crossterm = "0.23"
anyhow = "*"
ringbuf = "0.2.6"
itertools = "0.10.3"
tui = {path = "src/tui-rs"}
# using custom tui-rs version with changes from this fork https://github.com/Phoenix-Chen/tui-rs
crossbeam = "*"
symphonia = {version="*", features=["aac", "alac", "mp3", "isomp4"]}
rb = "0.4.0"
audiotags= "*"
flexi_logger = "0.22"
log = "0.4"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[profile.dev]
opt-level = 3


